--- a/iphone-loja/index.html
+++ b/iphone-loja/index.html
@@ -321,7 +321,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="elementor-element elementor-element-2cba1f41 elementor-widget elementor-widget-button" data-id="2cba1f41" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.checkoutphone.online/meABG98ywAKZ6Ea?">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPF">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Resgatar</span>
 		</span>
