--- a/iphone-loja/index.html
+++ b/iphone-loja/index.html
@@ -354,7 +354,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="elementor-element elementor-element-2c5898ab elementor-widget elementor-widget-button" data-id="2c5898ab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.checkoutphone.online/DYp0ZxN5LYjgmvX?">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPF">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Resgatar</span>
 		</span>
@@ -387,7 +387,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="elementor-element elementor-element-575bcfcd elementor-widget elementor-widget-button" data-id="575bcfcd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.checkoutphone.online/bz5KZbWq1w6G7dL?">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPF">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Resgatar</span>
 		</span>
@@ -420,7 +420,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="elementor-element elementor-element-5033168b elementor-widget elementor-widget-button" data-id="5033168b" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.checkoutphone.online/PyE2ZyNadn2GqRb?">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPF">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Resgatar</span>
 		</span>
