--- a/iphone-loja/index.html
+++ b/iphone-loja/index.html
@@ -354,7 +354,7 @@ document.addEventListener('DOMContentLoaded', function() {
 				<div class="elementor-element elementor-element-2c5898ab elementor-widget elementor-widget-button" data-id="2c5898ab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPF">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://checkout.pagamentos-seguro.info/VCCL1O8SBDPJ">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Resgatar</span>
 		</span>
