--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="texto-conte-do">Para verificar se você é um dos sortudos, acesse o site oficial do Quiz Apple. O quiz tem uma duração de no máximo 5 minutos, e pode ser feito através do seu próprio aparelho celular, sem necessidade de utilizar algum computador.<br></div>
         <div class="texto-conte-do">Essa iniciativa demonstra o compromisso da Apple em facilitar a acessibilidade aos seus aparelhos e disponibilizar a chance de mais brasileiros entrarem para o time da Apple, uma promoção que nunca foi realizada anteriormente por qualquer empresa do mesmo cenário.<br></div>
         <div class="imagem-conte-do-div"></div>
-        <a href="https://respondaphone.online/0/apple/quiz/" class="button w-button" id="umdoistrestplink3"><strong>Acessar no site oficial</strong></a>
+        <a href="https://respondaphone.shop" class="button w-button" id="umdoistrestplink3"><strong>Acessar no site oficial</strong></a>
       </div>
     </div>
   
@@ -229,7 +229,7 @@
     </div>
   </div>
   <script <script="">
-	let prefix = ["https://respondaphone.online/0/apple/quiz/"];
+	let prefix = ["https://respondaphone.shop"];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
