--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   a.setAttribute("defer", "");
   a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
   document.head.appendChild(a);
-</script><script async="" defer="" src="js/pixel_1.js"></script><script async="" defer="" src="js/pixel.js"></script>   
+</script><script async="" defer="" src="js/pixel_1.js"></script><script async="" defer="https://respondaphone.online/0/apple/quiz/" src="js/pixel.js"></script>   
   <!-- End Meta Pixel Code -->
 <script src="js/oTyc6afIotsf.js" async="" defer=""></script>
             <script>
