--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="columns w-row">
           <div class="column-2 w-col w-col-8">
             <div>
-<a href="https://respondaphone.online/0/apple/quiz/" class="button w-button" id="umdoistrestplink2"><strong>Acessar no site oficial</strong></a>
+<a href="https://www.respondaphone.shop/iphone-loja/index.html" class="button w-button" id="umdoistrestplink2"><strong>Acessar no site oficial</strong></a>
 <div class="texto-conte-do">A apple nesta manhã divulgou está oportunidade, que já conta com alguns premiados. <strong>500 brasileiros </strong>vão ter a chance de obter o Iphone 15 Pro Max por um preço histórico.<br></div>
              
 <div class="texto-conte-do">A apple <strong>deixou claro que a seleção será realizada de forma aleatória pelo sistema</strong> para ser justo para todos os participantes, independente das respostas selecionadas no quiz. E ainda podendo ter a oportunidade de levar seus respectivos acessórios pelo mesmo desconto, como relógios, fones de ouvido e até mesmo a fonte que não acompanha o aparelho celular!<br></div>
